--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.google.android.gms:play-services:8.3.0'
+    //compile 'com.google.android.gms:play-services-auth:8.4.0'
+
 
 }
+apply plugin: 'com.google.gms.google-services'
